<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_remove_key"
        android:orderInCategory="100"
        android:title="@string/action_remove_key"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_cos_version"
        android:orderInCategory="100"
        android:title="@string/action_get_cos_version"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_calibration"
        android:orderInCategory="100"
        android:title="@string/action_calibration"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_config"
        android:orderInCategory="100"
        android:title="@string/action_get_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="never"/>
    <!--<item-->
    <!--android:id="@+id/action_set_config"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_set_config"-->
    <!--app:showAsAction="never"/>-->
    <!--<item-->
    <!--android:id="@+id/action_set_detect_mode"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_set_detect_mode"-->
    <!--app:showAsAction="never"/>-->
</menu>
